--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "firebase": "^9.9.2",
     "postcss": "^8",
+    "sha256": "^0.2.0",
     "tailwindcss": "^3.1.8",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3",
