--- a/package.json
+++ b/package.json
@@ -11,15 +11,12 @@
     "autoprefixer": "^10",
     "bootstrap-icons-vue": "^1.8.1",
     "core-js": "^3.8.3",
+    "jenesius-vue-modal": "^1.7.2",
     "postcss": "^8",
     "tailwindcss": "^3.1.8",
-<<<<<<< HEAD
-    "vue": "^3.2.13",
+    "vue": "^3.2.37",
     "vue-router": "^4.1.3",
     "vuex": "^4.0.2"
-=======
-    "vue": "^3.2.37"
->>>>>>> 2ac54a541305d367a84d479d007d58eaa3b44351
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
