--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "autoprefixer": "^10",
     "bootstrap-icons-vue": "^1.8.1",
     "core-js": "^3.8.3",
+    "firebase": "^9.9.3",
     "jenesius-vue-modal": "^1.7.2",
+    "node-forge": "^1.3.1",
     "postcss": "^8",
     "tailwindcss": "^3.1.8",
     "vue": "^3.2.37",
+    "vue-cookies": "^1.8.1",
     "vue-router": "^4.1.3",
     "vuex": "^4.0.2"
   },
