--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "autoprefixer": "^10",
     "bootstrap-icons-vue": "^1.8.1",
     "core-js": "^3.8.3",
-    "firebase": "^9.9.2",
+    "firebase": "^8.10.1",
     "node-forge": "^1.3.1",
     "postcss": "^8",
     "sha256": "^0.2.0",
+    "survey-vue-ui": "^1.9.24",
     "tailwindcss": "^3.1.8",
     "vue": "^3.2.37",
     "vue-cookies": "^1.8.1",
