--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   },
   "dependencies": {
     "autoprefixer": "^10",
+    "bootstrap": "^3.3.7",
     "bootstrap-icons-vue": "^1.8.1",
     "core-js": "^3.8.3",
     "jenesius-vue-modal": "^1.7.2",
+    "jquery": "^3.6.0",
     "postcss": "^8",
+    "survey-creator": "^1.9.46",
+    "survey-vue": "^1.9.46",
+    "surveyjs-widgets": "^1.9.46",
     "tailwindcss": "^3.1.8",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3",
