--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
+    "build1": "NODE_ENV=production postcss src/assets/tailwind.css -o src/assets/main.css",
+    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
   },
   "dependencies": {
-    "autoprefixer": "^10",
+    "@popperjs/core": "^2.11.6",
+    "@tailwindcss/jit": "^0.1.18",
+    "autoprefixer": "^10.4.8",
     "bootstrap-icons-vue": "^1.8.1",
     "core-js": "^3.8.3",
     "postcss": "^8",
+    "postcss-cli": "^10.0.0",
     "tailwindcss": "^3.1.8",
-    "vue": "^3.2.37"
+    "tw-elements": "^1.0.0-alpha12",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
