--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^10",
     "bootstrap": "^3.3.7",
     "bootstrap-icons-vue": "^1.8.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
     "firebase": "^8.10.1",
     "jenesius-vue-modal": "^1.7.2",
@@ -24,6 +25,7 @@
     "tailwindcss": "^3.1.8",
     "tw-elements": "^1.0.0-alpha12",
     "vue": "^3.2.37",
+    "vue-chartkick": "^1.1.0",
     "vue-cookies": "^1.8.1",
     "vue-router": "^4.1.3",
     "vuex": "^4.0.2"
