--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bootstrap-icons-vue": "^1.8.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
+    "datatables.net-vue3": "^1.0.0",
     "firebase": "^8.10.1",
     "jenesius-vue-modal": "^1.7.2",
     "jquery": "^3.6.0",
     "node-forge": "^1.3.1",
     "postcss": "^8",
+    "primevue": "^3.17.0",
     "survey-creator": "^1.9.46",
     "survey-vue": "^1.9.46",
     "survey-vue-ui": "^1.9.24",
