--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@amcharts/amcharts5": "^5.2.22",
+    "@headlessui/vue": "^1.7.3",
     "autoprefixer": "^10",
     "bootstrap": "^3.3.7",
     "bootstrap-icons-vue": "^1.8.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
+    "datatables.net-dt": "^1.12.1",
     "datatables.net-vue3": "^1.0.0",
     "firebase": "^8.10.1",
     "jenesius-vue-modal": "^1.7.2",
