--- a/package.json
+++ b/package.json
@@ -5,19 +5,29 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build:tailwind": "tailwind build src/assets/styles/index.css -o src/assets/styles/tailwind.css",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run serve"
   },
   "dependencies": {
     "@amcharts/amcharts5": "^5.2.22",
+    "@fortawesome/fontawesome-free": "^6.2.0",
+    "@popperjs/core": "^2.11.6",
     "autoprefixer": "^10",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.1",
     "bootstrap-icons-vue": "^1.8.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
     "firebase": "^8.10.1",
+    "flowbite": "^1.5.3",
+    "gulp": "^4.0.2",
+    "gulp-append-prepend": "^1.0.9",
+    "html-to-pdfmake": "^2.4.6",
     "jenesius-vue-modal": "^1.7.2",
     "jquery": "^3.6.0",
+    "jspdf": "^2.3.1",
     "node-forge": "^1.3.1",
+    "pdfmake": "^0.2.5",
     "postcss": "^8",
     "survey-creator": "^1.9.46",
     "survey-vue": "^1.9.46",
