--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run serve"
   },
   "dependencies": {
-
+    "@amcharts/amcharts5": "^5.2.22",
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "@amcharts/amcharts5": "^5.2.22",
-    "@fortawesome/fontawesome-free": "^6.2.0",
-    "@popperjs/core": "^2.11.6",
     "@headlessui/vue": "^1.7.3",
+    "@popperjs/core": "^2.11.6",
     "autoprefixer": "^10",
     "bootstrap": "^3.4.1",
     "bootstrap-icons-vue": "^1.8.1",
@@ -32,9 +31,10 @@
     "gulp": "^4.0.2",
     "gulp-append-prepend": "^1.0.9",
     "html-to-pdfmake": "^2.4.6",
+    "html2canvas": "^1.4.1",
     "jenesius-vue-modal": "^1.7.2",
     "jquery": "^3.6.0",
-    "jspdf": "^2.3.1",
+    "jspdf": "^2.5.1",
     "node-forge": "^1.3.1",
     "pdfmake": "^0.2.5",
     "postcss": "^8",
