--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "> 1%",
     "last 2 versions",
     "not dead",
-    "not ie 11"
+    "not ie 11",
+    "defaults, not Firefox <=107"
   ]
 }
